# VoiceBridge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  deep-dive.md  interview-guide.md  project-history.md  roadmap.md
src/voicebridge/: __init__.py  main.py
src/voicebridge/bot/: app.py
src/voicebridge/bot/handlers/: settings.py  start.py  voice.py
src/voicebridge/bot/ui/: settings_keyboard.py
src/voicebridge/config/: __init__.py  settings.py
src/voicebridge/domain/: __init__.py  languages.py  reply_modes.py
src/voicebridge/schemas/: __init__.py  audio.py  text_pipeline.py  transcription.py  tts.py  user_settings.py
src/voicebridge/services/: user_settings.py
src/voicebridge/services/asr/: __init__.py  base.py  exceptions.py  registry.py  routing.py  service.py
src/voicebridge/services/asr/providers/: __init__.py  faster_whisper.py  nemo_uzbek.py
src/voicebridge/services/audio/: __init__.py  exceptions.py  service.py
src/voicebridge/services/pipeline/: text_pipeline.py
src/voicebridge/services/tts/: __init__.py  base.py  exceptions.py  registry.py  service.py
src/voicebridge/services/tts/providers/: __init__.py  gtts_provider.py
src/voicebridge/storage/: __init__.py  database.py  user_settings_repository.py
src/voicebridge/utils/: __init__.py  logging.py  runtime.py
tests/: __init__.py  test_asr_service.py  test_audio_service.py  test_database.py  test_groq_text_pipeline.py  test_gtts_provider.py  test_language_selection.py  test_tts_service.py  test_user_settings_service.py
